--- a/models.html
+++ b/models.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>TVS Models | Tirumala TVS Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explore all TVS bikes, scooters and electric vehicles at Tirumala TVS, Bidarahalli Bengaluru.">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -23,30 +22,48 @@
 
 <section class="hero">
   <div class="hero-inner">
-    <h1>TVS Two-Wheeler Models</h1>
-    <p>Bikes • Scooters • Electric Vehicles</p>
+    <h1>Explore TVS Two-Wheelers</h1>
+    <p>Scooters • Motorcycles • Electric Vehicles</p>
   </div>
 </section>
 
 <main class="container">
 
-  <!-- SCOOTERS -->
   <section>
     <h2>Scooters & Mopeds</h2>
     <div class="cards">
-      <div class="card"><h3>TVS XL 100</h3><p>Work-focused moped</p><a class="btn" href="models/xl100.html">View</a></div>
-      <div class="card"><h3>TVS Zest 110</h3><p>Lightweight scooter</p><a class="btn" href="models/zest110.html">View</a></div>
-      <div class="card"><h3>TVS Jupiter 113</h3><p>Comfort scooter</p><a class="btn" href="models/jupiter113.html">View</a></div>
-      <div class="card"><h3>TVS Jupiter 125</h3><p>Premium scooter</p><a class="btn" href="models/jupiter125.html">View</a></div>
-      <div class="card"><h3>TVS Ntorq 125</h3><p>Sporty scooter</p><a class="btn" href="models/ntorq125.html">View</a></div>
-      <div class="card"><h3>TVS Ntorq 150</h3><p>High performance</p><a class="btn" href="models/ntorq150.html">View</a></div>
+      <div class="card"><h3>TVS XL 100</h3><a href="models/xl100.html" class="btn">View</a></div>
+      <div class="card"><h3>TVS Zest 110</h3><a href="models/zest110.html" class="btn">View</a></div>
+      <div class="card"><h3>TVS Jupiter 113</h3><a href="models/jupiter113.html" class="btn">View</a></div>
+      <div class="card"><h3>TVS Jupiter 125</h3><a href="models/jupiter125.html" class="btn">View</a></div>
+      <div class="card"><h3>TVS Ntorq 125</h3><a href="models/ntorq125.html" class="btn">View</a></div>
+      <div class="card"><h3>TVS Ntorq 150</h3><a href="models/ntorq150.html" class="btn">View</a></div>
     </div>
   </section>
 
-  <!-- MOTORCYCLES -->
   <section>
     <h2>Motorcycles</h2>
     <div class="cards">
-      <div class="card"><h3>TVS Raider</h3><p>Sporty commuter</p><a class="btn" href="models/raider.html">View</a></div>
-      <div class="card"><h3>TVS Ronin</h3><p>Modern-retro bike</p><a class="btn" href="models/ronin.html">View</a></div>
-      <div class="card"><h3>Apache Series</h3><p>RTR 160 / 200 / RR 310</p
+      <div class="card"><h3>TVS Raider</h3><a href="models/raider.html" class="btn">View</a></div>
+      <div class="card"><h3>TVS Ronin</h3><a href="models/ronin.html" class="btn">View</a></div>
+      <div class="card"><h3>Apache Series</h3><a href="models/apache160.html" class="btn blue">Explore</a></div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Electric</h2>
+    <div class="cards">
+      <div class="card"><h3>TVS iQube</h3><a href="models/iqube.html" class="btn green">View</a></div>
+    </div>
+  </section>
+
+</main>
+
+<footer>
+  <div class="footer-inner">
+    © 2026 Tirumala TVS. All rights reserved.
+  </div>
+</footer>
+
+</body>
+</html>
