--- a/index.html
+++ b/index.html
@@ -22,14 +22,54 @@
 
 <section class="hero">
   <div class="hero-inner">
-    <h1>TVS Racing DNA. Trusted Local Dealer.</h1>
+    <h1>TVS Racing DNA. Trusted Dealer.</h1>
     <p>Authorized TVS Dealer – Bidarahalli, Bengaluru</p>
-    <a href="models.html" class="btn">Explore Models</a>
+    <a href="models.html" class="btn blue">Explore Models</a>
   </div>
 </section>
 
 <main class="container">
-  <!-- existing content remains unchanged -->
+
+  <section>
+    <h2>About TVS Motor Company</h2>
+    <p>
+      TVS Motor Company is a global two-wheeler manufacturer with over
+      100 years of legacy, presence in 80+ countries and leadership in
+      performance motorcycles, scooters and electric mobility.
+    </p>
+  </section>
+
+  <section>
+    <h2>Why Tirumala TVS</h2>
+    <ul>
+      <li>Authorized TVS dealership</li>
+      <li>Complete range of TVS bikes & scooters</li>
+      <li>Finance, EMI & insurance support</li>
+      <li>Genuine service & spare parts</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Popular TVS Models</h2>
+    <div class="cards">
+      <div class="card">
+        <h3>Apache Series</h3>
+        <p>160 • 200 • RR 310</p>
+        <a href="models/apache160.html" class="btn blue">Explore</a>
+      </div>
+      <div class="card">
+        <h3>Ntorq 125</h3>
+        <p>Sporty performance scooter</p>
+        <a href="models/ntorq125.html" class="btn">View</a>
+      </div>
+      <div class="card">
+        <h3>Jupiter</h3>
+        <p>Comfort family scooter</p>
+        <a href="models/jupiter113.html" class="btn">View</a>
+      </div>
+    </div>
+  </section>
+
 </main>
 
 <footer>
@@ -38,7 +78,7 @@
   </div>
 </footer>
 
-<!-- STICKY CTA BAR -->
+<!-- ===== STICKY CTA BAR ===== -->
 <div class="sticky-cta">
   <a href="contacts.html" class="testride">Book Test Ride</a>
   <a href="contacts.html" class="quote">Get Quotation</a>
