--- a/index.html
+++ b/index.html
@@ -2,88 +2,119 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tirumala TVS | Authorized TVS Dealer Bengaluru</title>
+  <title>Tirumala TVS – Authorized TVS Dealer in Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Tirumala TVS is an authorized TVS dealer in Bengaluru offering sales, service, finance, test rides and genuine spare parts.">
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 
+<!-- TOP BAR -->
+<div class="top-bar">
+  <div class="container">
+    <div>📞 +91 73XXXXXXX | ✉️ tirumalatvs@gmail.com</div>
+    <div>📍 Bidarahalli, Bengaluru</div>
+  </div>
+</div>
+
+<!-- HEADER -->
 <header>
-  <div class="header-container">
-    <h2>Tirumala TVS</h2>
+  <div class="header-inner">
+    <h1>Tirumala TVS</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="models.html">Models</a>
       <a href="contacts.html">Contact</a>
+      <a href="#" class="book">Book Now</a>
     </nav>
   </div>
 </header>
 
+<!-- HERO -->
 <section class="hero">
-  <div class="hero-inner">
-    <h1>TVS Racing DNA. Trusted Dealer.</h1>
-    <p>Authorized TVS Dealer – Bidarahalli, Bengaluru</p>
-    <a href="models.html" class="btn blue">Explore Models</a>
+  <div class="container">
+    <h2>India’s Trusted Two-Wheeler Brand</h2>
+    <p>
+      Explore the complete range of TVS motorcycles, scooters, mopeds and electric vehicles
+      with Tirumala TVS – your trusted authorized dealer in Bengaluru.
+    </p>
+    <div class="cta">
+      <a href="#">Book Test Ride</a>
+      <a href="#">Get Quotation</a>
+      <a href="#">Book Service</a>
+    </div>
   </div>
 </section>
 
-<main class="container">
-
-  <section>
-    <h2>About TVS Motor Company</h2>
-    <p>
-      TVS Motor Company is a global two-wheeler manufacturer with over
-      100 years of legacy, presence in 80+ countries and leadership in
-      performance motorcycles, scooters and electric mobility.
-    </p>
-  </section>
-
-  <section>
-    <h2>Why Tirumala TVS</h2>
-    <ul>
-      <li>Authorized TVS dealership</li>
-      <li>Complete range of TVS bikes & scooters</li>
-      <li>Finance, EMI & insurance support</li>
-      <li>Genuine service & spare parts</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Popular TVS Models</h2>
-    <div class="cards">
-      <div class="card">
-        <h3>Apache Series</h3>
-        <p>160 • 200 • RR 310</p>
-        <a href="models/apache160.html" class="btn blue">Explore</a>
-      </div>
-      <div class="card">
-        <h3>Ntorq 125</h3>
-        <p>Sporty performance scooter</p>
-        <a href="models/ntorq125.html" class="btn">View</a>
-      </div>
-      <div class="card">
-        <h3>Jupiter</h3>
-        <p>Comfort family scooter</p>
-        <a href="models/jupiter113.html" class="btn">View</a>
-      </div>
+<!-- QUICK ACTIONS -->
+<section class="section light">
+  <h2 style="text-align:center;">Quick Actions</h2>
+  <div class="grid cols-4">
+    <div class="card">
+      <h3>Compare Models</h3>
+      <p>View specifications and compare all TVS vehicles.</p>
+      <a href="models.html">Explore →</a>
     </div>
-  </section>
+    <div class="card">
+      <h3>Book Test Ride</h3>
+      <p>Schedule a test ride instantly at our showroom.</p>
+      <a href="#">Book Now →</a>
+    </div>
+    <div class="card">
+      <h3>Book Service</h3>
+      <p>Authorized TVS service with genuine spare parts.</p>
+      <a href="#">Book Service →</a>
+    </div>
+    <div class="card">
+      <h3>Explore Electric</h3>
+      <p>Discover TVS iQube electric scooters.</p>
+      <a href="models.html">View EVs →</a>
+    </div>
+  </div>
+</section>
 
-</main>
+<!-- ABOUT -->
+<section class="section">
+  <h2>About TVS Motor Company</h2>
+  <p>
+    TVS Motor Company is a globally trusted two-wheeler manufacturer with decades of
+    innovation, racing heritage and engineering excellence. From commuter motorcycles
+    to high-performance machines and electric mobility, TVS continues to redefine mobility.
+  </p>
+</section>
+
+<!-- STATS -->
+<section class="section stats">
+  <div class="stats-grid">
+    <div class="stat">
+      <h3>15,000+</h3>
+      <p>Vehicles Sold</p>
+    </div>
+    <div class="stat">
+      <h3>50,000+</h3>
+      <p>Services Completed</p>
+    </div>
+    <div class="stat">
+      <h3>100%</h3>
+      <p>Genuine Parts</p>
+    </div>
+    <div class="stat">
+      <h3>30+</h3>
+      <p>Years of Trust</p>
+    </div>
+  </div>
+</section>
+
+<!-- CTA -->
+<section class="section cta-strip">
+  <h2>Visit Tirumala TVS Today</h2>
+  <p>Sales • Service • Finance • Insurance • Genuine Spares</p>
+  <a href="contacts.html">Contact Us</a>
+</section>
 
 <footer>
-  <div class="footer-inner">
-    © 2026 Tirumala TVS. All rights reserved.
-  </div>
+  © 2026 Tirumala TVS. All Rights Reserved.
 </footer>
-
-<!-- ===== STICKY CTA BAR ===== -->
-<div class="sticky-cta">
-  <a href="contacts.html" class="testride">Book Test Ride</a>
-  <a href="contacts.html" class="quote">Get Quotation</a>
-  <a href="https://wa.me/919964946512" target="_blank" class="whatsapp">WhatsApp</a>
-</div>
 
 </body>
 </html>
