--- a/models.html
+++ b/models.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>TVS Models | Tirumala TVS Bengaluru</title>
+  <title>TVS Models – Tirumala TVS Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 
 <header>
-  <div class="header-container">
-    <h2>Tirumala TVS</h2>
+  <div class="header-inner">
+    <h1>Tirumala TVS</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="models.html">Models</a>
@@ -20,49 +19,36 @@
   </div>
 </header>
 
-<section class="hero">
-  <div class="hero-inner">
-    <h1>Explore TVS Two-Wheelers</h1>
-    <p>Scooters • Motorcycles • Electric Vehicles</p>
+<section class="section light">
+  <h2>TVS Motorcycles</h2>
+  <div class="grid cols-4">
+    <div class="card"><h3>Apache RTR 160 / 200</h3><a href="models/apache160.html">View Details →</a></div>
+    <div class="card"><h3>Apache RR 310</h3><a href="models/apache160.html">View Details →</a></div>
+    <div class="card"><h3>Raider 125</h3><a href="models/raider.html">View Details →</a></div>
+    <div class="card"><h3>Ronin</h3><a href="models/ronin.html">View Details →</a></div>
   </div>
 </section>
 
-<main class="container">
+<section class="section">
+  <h2>TVS Scooters</h2>
+  <div class="grid cols-4">
+    <div class="card"><h3>Jupiter 113</h3><a href="models/jupiter113.html">View →</a></div>
+    <div class="card"><h3>Jupiter 125</h3><a href="models/jupiter125.html">View →</a></div>
+    <div class="card"><h3>Ntorq 125</h3><a href="models/ntorq125.html">View →</a></div>
+    <div class="card"><h3>Zest 110</h3><a href="models/zest110.html">View →</a></div>
+  </div>
+</section>
 
-  <section>
-    <h2>Scooters & Mopeds</h2>
-    <div class="cards">
-      <div class="card"><h3>TVS XL 100</h3><a href="models/xl100.html" class="btn">View</a></div>
-      <div class="card"><h3>TVS Zest 110</h3><a href="models/zest110.html" class="btn">View</a></div>
-      <div class="card"><h3>TVS Jupiter 113</h3><a href="models/jupiter113.html" class="btn">View</a></div>
-      <div class="card"><h3>TVS Jupiter 125</h3><a href="models/jupiter125.html" class="btn">View</a></div>
-      <div class="card"><h3>TVS Ntorq 125</h3><a href="models/ntorq125.html" class="btn">View</a></div>
-      <div class="card"><h3>TVS Ntorq 150</h3><a href="models/ntorq150.html" class="btn">View</a></div>
-    </div>
-  </section>
-
-  <section>
-    <h2>Motorcycles</h2>
-    <div class="cards">
-      <div class="card"><h3>TVS Raider</h3><a href="models/raider.html" class="btn">View</a></div>
-      <div class="card"><h3>TVS Ronin</h3><a href="models/ronin.html" class="btn">View</a></div>
-      <div class="card"><h3>Apache Series</h3><a href="models/apache160.html" class="btn blue">Explore</a></div>
-    </div>
-  </section>
-
-  <section>
-    <h2>Electric</h2>
-    <div class="cards">
-      <div class="card"><h3>TVS iQube</h3><a href="models/iqube.html" class="btn green">View</a></div>
-    </div>
-  </section>
-
-</main>
+<section class="section light">
+  <h2>Electric & Mopeds</h2>
+  <div class="grid cols-4">
+    <div class="card"><h3>TVS iQube</h3><a href="models/iqube.html">Explore →</a></div>
+    <div class="card"><h3>TVS XL 100</h3><a href="models/xl100.html">Explore →</a></div>
+  </div>
+</section>
 
 <footer>
-  <div class="footer-inner">
-    © 2026 Tirumala TVS. All rights reserved.
-  </div>
+  © 2026 Tirumala TVS. All Rights Reserved.
 </footer>
 
 </body>
