--- a/index.html
+++ b/index.html
@@ -1,119 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Tirumala TVS – Authorized TVS Dealer in Bengaluru</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Tirumala TVS is an authorized TVS dealer in Bengaluru offering sales, service, finance, test rides and genuine spare parts.">
-  <link rel="stylesheet" href="css/style.css">
+<meta charset="UTF-8">
+<title>Tirumala TVS – Authorized TVS Dealer in Bengaluru</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-<!-- TOP BAR -->
-<div class="top-bar">
-  <div class="container">
-    <div>📞 +91 73XXXXXXX | ✉️ tirumalatvs@gmail.com</div>
-    <div>📍 Bidarahalli, Bengaluru</div>
-  </div>
-</div>
-
-<!-- HEADER -->
 <header>
-  <div class="header-inner">
-    <h1>Tirumala TVS</h1>
+  <div class="header-top">
+    <span>Authorized TVS Dealer – Bengaluru</span>
+    <span>📞 7328828809 | ✉️ contact@tirumalatvs.in</span>
+  </div>
+  <div class="header-main">
+    <h2>Tirumala TVS</h2>
     <nav>
       <a href="index.html">Home</a>
       <a href="models.html">Models</a>
       <a href="contacts.html">Contact</a>
-      <a href="#" class="book">Book Now</a>
     </nav>
   </div>
 </header>
 
-<!-- HERO -->
 <section class="hero">
-  <div class="container">
-    <h2>India’s Trusted Two-Wheeler Brand</h2>
+  <div class="hero-inner">
+    <h1>Driven by Trust. Powered by TVS.</h1>
     <p>
-      Explore the complete range of TVS motorcycles, scooters, mopeds and electric vehicles
-      with Tirumala TVS – your trusted authorized dealer in Bengaluru.
+      Tirumala TVS is your trusted destination for motorcycles, scooters,
+      mopeds and electric vehicles from TVS Motor Company.
     </p>
-    <div class="cta">
-      <a href="#">Book Test Ride</a>
-      <a href="#">Get Quotation</a>
-      <a href="#">Book Service</a>
-    </div>
+    <a href="models.html" class="btn">Explore Models</a>
+    <a href="contacts.html" class="btn">Book Test Ride</a>
   </div>
 </section>
 
-<!-- QUICK ACTIONS -->
-<section class="section light">
-  <h2 style="text-align:center;">Quick Actions</h2>
-  <div class="grid cols-4">
-    <div class="card">
-      <h3>Compare Models</h3>
-      <p>View specifications and compare all TVS vehicles.</p>
-      <a href="models.html">Explore →</a>
-    </div>
-    <div class="card">
-      <h3>Book Test Ride</h3>
-      <p>Schedule a test ride instantly at our showroom.</p>
-      <a href="#">Book Now →</a>
-    </div>
-    <div class="card">
-      <h3>Book Service</h3>
-      <p>Authorized TVS service with genuine spare parts.</p>
-      <a href="#">Book Service →</a>
-    </div>
-    <div class="card">
-      <h3>Explore Electric</h3>
-      <p>Discover TVS iQube electric scooters.</p>
-      <a href="models.html">View EVs →</a>
-    </div>
-  </div>
-</section>
-
-<!-- ABOUT -->
 <section class="section">
-  <h2>About TVS Motor Company</h2>
+  <h2>Quick Actions</h2>
+  <div class="actions">
+    <div class="action-box">
+      <h3>Compare Models</h3>
+      <p>View specifications & variants of all TVS vehicles.</p>
+      <a href="models.html">Compare Now →</a>
+    </div>
+    <div class="action-box">
+      <h3>Book Test Ride</h3>
+      <p>Experience TVS performance first-hand.</p>
+      <a href="contacts.html">Book Ride →</a>
+    </div>
+    <div class="action-box">
+      <h3>Book Service</h3>
+      <p>Authorized service with genuine spare parts.</p>
+      <a href="contacts.html">Schedule Service →</a>
+    </div>
+    <div class="action-box">
+      <h3>Explore Electric</h3>
+      <p>Discover the TVS iQube electric range.</p>
+      <a href="models.html">Explore EV →</a>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <h2>Why TVS Motor Company</h2>
   <p>
-    TVS Motor Company is a globally trusted two-wheeler manufacturer with decades of
-    innovation, racing heritage and engineering excellence. From commuter motorcycles
-    to high-performance machines and electric mobility, TVS continues to redefine mobility.
+    TVS Motor Company is a globally trusted two-wheeler manufacturer with
+    over a century of innovation, motorsports heritage and advanced technology.
+    Known for quality, reliability and performance, TVS vehicles are sold
+    across multiple international markets.
   </p>
 </section>
 
-<!-- STATS -->
-<section class="section stats">
-  <div class="stats-grid">
-    <div class="stat">
-      <h3>15,000+</h3>
-      <p>Vehicles Sold</p>
-    </div>
-    <div class="stat">
-      <h3>50,000+</h3>
-      <p>Services Completed</p>
-    </div>
-    <div class="stat">
-      <h3>100%</h3>
-      <p>Genuine Parts</p>
-    </div>
-    <div class="stat">
-      <h3>30+</h3>
-      <p>Years of Trust</p>
-    </div>
-  </div>
-</section>
-
-<!-- CTA -->
-<section class="section cta-strip">
-  <h2>Visit Tirumala TVS Today</h2>
-  <p>Sales • Service • Finance • Insurance • Genuine Spares</p>
-  <a href="contacts.html">Contact Us</a>
+<section class="info-strip">
+  <ul>
+    <li>🏆 Award-winning motorcycles & scooters</li>
+    <li>🏁 Racing DNA – Apache & RR Series</li>
+    <li>⚡ Advanced EV technology – iQube</li>
+    <li>🛠 Genuine TVS service & parts</li>
+  </ul>
 </section>
 
 <footer>
-  © 2026 Tirumala TVS. All Rights Reserved.
+  <div>
+    © 2026 Tirumala TVS, Bengaluru. Authorized TVS Dealer.
+  </div>
 </footer>
 
 </body>
