--- a/models.html
+++ b/models.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>TVS Models – Tirumala TVS Bengaluru</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+<meta charset="UTF-8">
+<title>TVS Models – Tirumala TVS Bengaluru</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
 <header>
-  <div class="header-inner">
-    <h1>Tirumala TVS</h1>
+  <div class="header-main">
+    <h2>Tirumala TVS</h2>
     <nav>
       <a href="index.html">Home</a>
       <a href="models.html">Models</a>
@@ -19,36 +20,73 @@
   </div>
 </header>
 
-<section class="section light">
+<section class="section">
   <h2>TVS Motorcycles</h2>
-  <div class="grid cols-4">
-    <div class="card"><h3>Apache RTR 160 / 200</h3><a href="models/apache160.html">View Details →</a></div>
-    <div class="card"><h3>Apache RR 310</h3><a href="models/apache160.html">View Details →</a></div>
-    <div class="card"><h3>Raider 125</h3><a href="models/raider.html">View Details →</a></div>
-    <div class="card"><h3>Ronin</h3><a href="models/ronin.html">View Details →</a></div>
+  <div class="models-grid">
+    <div class="model-card">
+      <h3>Apache RTR Series</h3>
+      <p>Performance motorcycles inspired by racing.</p>
+      <a href="models/apache160.html">View Details</a>
+    </div>
+    <div class="model-card">
+      <h3>Apache RR 310</h3>
+      <p>Premium supersport motorcycle.</p>
+      <a href="models/apache160.html">View Details</a>
+    </div>
+    <div class="model-card">
+      <h3>TVS Ronin</h3>
+      <p>Modern-retro cruiser with comfort & torque.</p>
+      <a href="models/ronin.html">View Details</a>
+    </div>
+    <div class="model-card">
+      <h3>TVS Raider</h3>
+      <p>Sporty commuter motorcycle.</p>
+      <a href="models/raider.html">View Details</a>
+    </div>
   </div>
 </section>
 
 <section class="section">
-  <h2>TVS Scooters</h2>
-  <div class="grid cols-4">
-    <div class="card"><h3>Jupiter 113</h3><a href="models/jupiter113.html">View →</a></div>
-    <div class="card"><h3>Jupiter 125</h3><a href="models/jupiter125.html">View →</a></div>
-    <div class="card"><h3>Ntorq 125</h3><a href="models/ntorq125.html">View →</a></div>
-    <div class="card"><h3>Zest 110</h3><a href="models/zest110.html">View →</a></div>
+  <h2>Scooters & Mopeds</h2>
+  <div class="models-grid">
+    <div class="model-card">
+      <h3>TVS Jupiter</h3>
+      <p>India’s most trusted family scooter.</p>
+      <a href="models/jupiter125.html">View Details</a>
+    </div>
+    <div class="model-card">
+      <h3>TVS Ntorq 125</h3>
+      <p>Race-inspired performance scooter.</p>
+      <a href="models/ntorq125.html">View Details</a>
+    </div>
+    <div class="model-card">
+      <h3>TVS Zest 110</h3>
+      <p>Lightweight & stylish scooter.</p>
+      <a href="models/zest110.html">View Details</a>
+    </div>
+    <div class="model-card">
+      <h3>TVS XL 100</h3>
+      <p>Reliable moped for daily utility.</p>
+      <a href="models/xl100.html">View Details</a>
+    </div>
   </div>
 </section>
 
-<section class="section light">
-  <h2>Electric & Mopeds</h2>
-  <div class="grid cols-4">
-    <div class="card"><h3>TVS iQube</h3><a href="models/iqube.html">Explore →</a></div>
-    <div class="card"><h3>TVS XL 100</h3><a href="models/xl100.html">Explore →</a></div>
+<section class="section">
+  <h2>Electric Vehicles</h2>
+  <div class="models-grid">
+    <div class="model-card">
+      <h3>TVS iQube</h3>
+      <p>Smart electric scooter with connected tech.</p>
+      <a href="models/iqube.html">View Details</a>
+    </div>
   </div>
 </section>
 
 <footer>
-  © 2026 Tirumala TVS. All Rights Reserved.
+  <div>
+    © 2026 Tirumala TVS, Bengaluru.
+  </div>
 </footer>
 
 </body>
