--- a/models.html
+++ b/models.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>TVS Models – Tirumala TVS Bengaluru</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <title>TVS Models | Tirumala TVS Bengaluru</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
+<!-- HEADER -->
 <header>
   <div class="header-main">
     <h2>Tirumala TVS</h2>
@@ -20,72 +21,122 @@
   </div>
 </header>
 
+<!-- PAGE TITLE -->
+<section class="section">
+  <h1 style="color:#0b4fd8;">TVS Models</h1>
+  <p>
+    Explore the complete range of TVS Motorcycles, Scooters, Mopeds and
+    Electric Vehicles available at Tirumala TVS, Bengaluru.
+  </p>
+</section>
+
+<!-- MOTORCYCLES -->
 <section class="section">
   <h2>TVS Motorcycles</h2>
+
   <div class="models-grid">
     <div class="model-card">
-      <h3>Apache RTR Series</h3>
-      <p>Performance motorcycles inspired by racing.</p>
+      <h3>Apache RTR 160 / 200</h3>
+      <p>Race-inspired street motorcycles with powerful performance.</p>
       <a href="models/apache160.html">View Details</a>
     </div>
+
     <div class="model-card">
       <h3>Apache RR 310</h3>
-      <p>Premium supersport motorcycle.</p>
+      <p>Premium supersport motorcycle with track-focused engineering.</p>
       <a href="models/apache160.html">View Details</a>
     </div>
+
+    <div class="model-card">
+      <h3>TVS Raider 125</h3>
+      <p>Sporty commuter with advanced technology and comfort.</p>
+      <a href="models/raider.html">View Details</a>
+    </div>
+
     <div class="model-card">
       <h3>TVS Ronin</h3>
-      <p>Modern-retro cruiser with comfort & torque.</p>
+      <p>Modern-retro motorcycle built for relaxed cruising.</p>
       <a href="models/ronin.html">View Details</a>
-    </div>
-    <div class="model-card">
-      <h3>TVS Raider</h3>
-      <p>Sporty commuter motorcycle.</p>
-      <a href="models/raider.html">View Details</a>
     </div>
   </div>
 </section>
 
+<!-- SCOOTERS -->
 <section class="section">
-  <h2>Scooters & Mopeds</h2>
+  <h2>TVS Scooters</h2>
+
   <div class="models-grid">
     <div class="model-card">
-      <h3>TVS Jupiter</h3>
-      <p>India’s most trusted family scooter.</p>
+      <h3>TVS Jupiter 113</h3>
+      <p>Comfortable and reliable family scooter.</p>
+      <a href="models/jupiter113.html">View Details</a>
+    </div>
+
+    <div class="model-card">
+      <h3>TVS Jupiter 125</h3>
+      <p>Premium scooter with power and large storage.</p>
       <a href="models/jupiter125.html">View Details</a>
     </div>
+
     <div class="model-card">
       <h3>TVS Ntorq 125</h3>
-      <p>Race-inspired performance scooter.</p>
+      <p>Sporty scooter with SmartXonnect technology.</p>
       <a href="models/ntorq125.html">View Details</a>
     </div>
+
     <div class="model-card">
       <h3>TVS Zest 110</h3>
-      <p>Lightweight & stylish scooter.</p>
+      <p>Lightweight, stylish scooter for city riding.</p>
       <a href="models/zest110.html">View Details</a>
     </div>
+  </div>
+</section>
+
+<!-- MOPEDS -->
+<section class="section">
+  <h2>TVS Mopeds</h2>
+
+  <div class="models-grid">
     <div class="model-card">
       <h3>TVS XL 100</h3>
-      <p>Reliable moped for daily utility.</p>
+      <p>India’s trusted moped for work and utility.</p>
       <a href="models/xl100.html">View Details</a>
     </div>
   </div>
 </section>
 
+<!-- ELECTRIC -->
 <section class="section">
   <h2>Electric Vehicles</h2>
+
   <div class="models-grid">
     <div class="model-card">
       <h3>TVS iQube</h3>
-      <p>Smart electric scooter with connected tech.</p>
+      <p>Smart electric scooter with connected features.</p>
       <a href="models/iqube.html">View Details</a>
     </div>
   </div>
 </section>
 
+<!-- CTA -->
+<section class="section" style="background:#f5f7fb;border-radius:12px;">
+  <h2>Need Help Choosing a Model?</h2>
+  <p>
+    Visit Tirumala TVS showroom or contact us for expert guidance,
+    test rides and best offers.
+  </p>
+  <a href="contacts.html"
+     style="display:inline-block;margin-top:10px;padding:12px 24px;
+            background:#e11d48;color:#fff;border-radius:6px;
+            text-decoration:none;font-weight:bold;">
+    Contact Us
+  </a>
+</section>
+
+<!-- FOOTER -->
 <footer>
   <div>
-    © 2026 Tirumala TVS, Bengaluru.
+    © 2026 Tirumala TVS, Bengaluru. Authorized TVS Dealer.
   </div>
 </footer>
 
