--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Tirumala TVS – Authorized TVS Dealer in Bengaluru</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <title>Tirumala TVS | Authorized TVS Dealer in Bengaluru</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+        content="Tirumala TVS is an authorized TVS Motor Company dealer in Bengaluru offering bikes, scooters, EVs, service, finance and test rides.">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
+<!-- HEADER -->
 <header>
-  <div class="header-top">
-    <span>Authorized TVS Dealer – Bengaluru</span>
-    <span>📞 7328828809 | ✉️ contact@tirumalatvs.in</span>
-  </div>
   <div class="header-main">
     <h2>Tirumala TVS</h2>
     <nav>
@@ -24,66 +23,115 @@
   </div>
 </header>
 
+<!-- HERO -->
 <section class="hero">
-  <div class="hero-inner">
-    <h1>Driven by Trust. Powered by TVS.</h1>
-    <p>
-      Tirumala TVS is your trusted destination for motorcycles, scooters,
-      mopeds and electric vehicles from TVS Motor Company.
-    </p>
-    <a href="models.html" class="btn">Explore Models</a>
-    <a href="contacts.html" class="btn">Book Test Ride</a>
-  </div>
-</section>
-
-<section class="section">
-  <h2>Quick Actions</h2>
-  <div class="actions">
-    <div class="action-box">
-      <h3>Compare Models</h3>
-      <p>View specifications & variants of all TVS vehicles.</p>
-      <a href="models.html">Compare Now →</a>
-    </div>
-    <div class="action-box">
-      <h3>Book Test Ride</h3>
-      <p>Experience TVS performance first-hand.</p>
-      <a href="contacts.html">Book Ride →</a>
-    </div>
-    <div class="action-box">
-      <h3>Book Service</h3>
-      <p>Authorized service with genuine spare parts.</p>
-      <a href="contacts.html">Schedule Service →</a>
-    </div>
-    <div class="action-box">
-      <h3>Explore Electric</h3>
-      <p>Discover the TVS iQube electric range.</p>
-      <a href="models.html">Explore EV →</a>
-    </div>
-  </div>
-</section>
-
-<section class="section">
-  <h2>Why TVS Motor Company</h2>
+  <h1>Driven by Trust. Powered by TVS.</h1>
   <p>
-    TVS Motor Company is a globally trusted two-wheeler manufacturer with
-    over a century of innovation, motorsports heritage and advanced technology.
-    Known for quality, reliability and performance, TVS vehicles are sold
-    across multiple international markets.
+    Authorized TVS Motor Company dealer serving Bengaluru with
+    motorcycles, scooters, electric vehicles, service and finance.
+  </p>
+
+  <div class="hero-buttons">
+    <a href="models.html" class="btn-primary">Explore Models</a>
+    <a href="contacts.html" class="btn-secondary">Book Test Ride</a>
+  </div>
+</section>
+
+<!-- APACHE BANNER -->
+<section class="apache-banner">
+  <div class="apache-content">
+    <h2>TVS Apache Series</h2>
+    <p>
+      Born from the racetrack. Crafted by champions.
+      The TVS Apache series represents over four decades of racing excellence
+      and cutting-edge engineering.
+    </p>
+
+    <ul>
+      <li>🏆 Indian Motorcycle of the Year – TVS Raider</li>
+      <li>🏁 Racing DNA from TVS Racing</li>
+      <li>⚙ Advanced performance & safety technology</li>
+    </ul>
+
+    <a href="models/apache160.html" class="btn-apache">
+      Explore Apache Range →
+    </a>
+  </div>
+</section>
+
+<!-- ABOUT TVS -->
+<section class="section">
+  <h2>About TVS Motor Company</h2>
+  <p>
+    TVS Motor Company is one of India’s most trusted two-wheeler manufacturers
+    with a legacy of innovation, racing excellence and global presence in
+    over 80 countries. Known for quality, performance and reliability,
+    TVS continues to lead the industry across motorcycles, scooters and EVs.
   </p>
 </section>
 
-<section class="info-strip">
-  <ul>
-    <li>🏆 Award-winning motorcycles & scooters</li>
-    <li>🏁 Racing DNA – Apache & RR Series</li>
-    <li>⚡ Advanced EV technology – iQube</li>
-    <li>🛠 Genuine TVS service & parts</li>
-  </ul>
+<!-- ABOUT DEALER -->
+<section class="section highlight">
+  <h2>Why Tirumala TVS?</h2>
+
+  <div class="info-grid">
+    <div>
+      <h3>Authorized TVS Dealer</h3>
+      <p>Sales, service, genuine spare parts & warranty support.</p>
+    </div>
+
+    <div>
+      <h3>Complete Product Range</h3>
+      <p>Apache, Raider, Ronin, Jupiter, Ntorq, iQube & XL 100.</p>
+    </div>
+
+    <div>
+      <h3>Sales & After-Sales</h3>
+      <p>Test rides, finance, insurance & authorized service.</p>
+    </div>
+
+    <div>
+      <h3>Trusted by Bengaluru Riders</h3>
+      <p>Focused on transparency, long-term support & customer satisfaction.</p>
+    </div>
+  </div>
 </section>
 
+<!-- QUICK ACTIONS -->
+<section class="section quick-actions">
+  <h2>Quick Actions</h2>
+
+  <div class="models-grid">
+    <div class="model-card">
+      <h3>Compare Models</h3>
+      <p>View specifications & features of all TVS vehicles.</p>
+      <a href="models.html">Compare →</a>
+    </div>
+
+    <div class="model-card">
+      <h3>Book Test Ride</h3>
+      <p>Schedule a test ride at Tirumala TVS.</p>
+      <a href="contacts.html">Book Now →</a>
+    </div>
+
+    <div class="model-card">
+      <h3>Book Service</h3>
+      <p>Authorized TVS service appointment.</p>
+      <a href="contacts.html">Schedule →</a>
+    </div>
+
+    <div class="model-card">
+      <h3>Explore EV</h3>
+      <p>Discover TVS iQube electric scooters.</p>
+      <a href="models/iqube.html">Explore →</a>
+    </div>
+  </div>
+</section>
+
+<!-- FOOTER -->
 <footer>
   <div>
-    © 2026 Tirumala TVS, Bengaluru. Authorized TVS Dealer.
+    © 2026 Tirumala TVS, Bengaluru · Authorized TVS Dealer
   </div>
 </footer>
 
